adding working basic functionality of game

--- a/index.html
+++ b/index.html
@@ -92,10 +92,9 @@
 				<div class="spot row5"></div>
 			</div>
 		</div>
-
-
-
-
+	</div>
+	<div id="game-outcome-container">
+		<div id="game-outcome"></div>
 	</div>
 	
 <script type="text/javascript" src="scripts.js"></script>
