adding name inputs and random first player

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 		<div id="header">CONNECT FOUR</div>
 		<div id="instructions">Click a button to drop your piece in that column.</div>
 	</div>
+	<div id="name-input-container">
+		<input id="player1-input" placeholder="Player 1 Name">
+		<input id="player2-input" placeholder="Player 2 Name">
+	</div>
+	<div id="start-button-container">
+		<button id="start-button">START!</button>
+	</div>
+	<div id="player-order-container">
+		<div id="player-order"></div>
+		<img id="dice-roll"src="diceroll.gif">
+	</div>
 	<div id="spot-container">
 		<div class="column-container">
 			<button>&darr;</button>
