adding play again button

--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
 	<div id="game-outcome-container">
 		<div id="game-outcome"></div>
 	</div>
+	<div id="play-again-container">
+		<button id="play-again">Play again!</button>
+	</div>
 	
 <script type="text/javascript" src="scripts.js"></script>
 </body>
