changing player color slightly

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title></title>
+	<title>Play Connect Four!</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<script type="text/javascript" src="jquery.js"></script>
 </head>
@@ -20,6 +20,7 @@
 		<div id="player-order"></div>
 		<img id="dice-roll"src="diceroll.gif">
 	</div>
+	<div id="current-player"></div>
 	<div id="spot-container">
 		<div class="column-container">
 			<button>&darr;</button>
