adding candy crush theme with fonts, colors, background image

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <head>
 	<title>Play Connect Four!</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="candicefont.css">
 	<script type="text/javascript" src="jquery.js"></script>
 </head>
 <body>
 	<div id="header-container">
-		<div id="header">CONNECT FOUR</div>
+		<div id="header1">Candy</div>
+		<div id="header2">Connect Four!</div>
 		<div id="instructions">Click a button to drop your piece in that column.</div>
 	</div>
 	<div id="name-input-container">
@@ -14,7 +16,7 @@
 		<input id="player2-input" placeholder="Player 2 Name">
 	</div>
 	<div id="start-button-container">
-		<button id="start-button">START!</button>
+		<button id="start-button">Start!</button>
 	</div>
 	<div id="player-order-container">
 		<div id="player-order"></div>
