adding current player to say whose turn it is; fixing bug with move counter

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<div id="header1">Candy</div>
 		<div id="header2">Connect Four!</div>
 		<div id="instructions">Click a button to drop your piece in that column.</div>
+		<div id="current-player"></div>
 	</div>
 	<div id="name-input-container">
 		<input id="player1-input" placeholder="Player 1 Name">
