adding comments to js file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Play Connect Four!</title>
+	<title>Play Candy Connect Four!</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<script type="text/javascript" src="jquery.js"></script>
 </head>
@@ -31,7 +31,7 @@
 	</div>
 	<div id="spot-container">
 		<div class="column-container">
-			<button>&darr;</button>
+			<button class="spot-button">&darr;</button>
 			<div class="column" id="col0">
 				<div class="spot row0 diag2"></div>
 				<div class="spot row1 diag1"></div>
@@ -43,7 +43,7 @@
 		</div>
 		
 		<div class="column-container">
-			<button>&darr;</button>
+			<button class="spot-button">&darr;</button>
 			<div class="column" id="col1">
 				<div class="spot row0 diag3"></div>
 				<div class="spot row1 diag2"></div>
@@ -54,7 +54,7 @@
 			</div>
 		</div>
 		<div class="column-container">
-			<button>&darr;</button>
+			<button class="spot-button">&darr;</button>
 			<div class="column" id="col2">
 				<div class="spot row0 diag4"></div>
 				<div class="spot row1 diag3 diag11"></div>
@@ -66,7 +66,7 @@
 		</div>
 		
 		<div class="column-container">
-			<button>&darr;</button>
+			<button class="spot-button">&darr;</button>
 			<div class="column" id="col3">
 				<div class="spot row0 diag5 diag11"></div>
 				<div class="spot row1 diag4 diag10"></div>
@@ -78,7 +78,7 @@
 		</div>
 
 		<div class="column-container">
-			<button>&darr;</button>
+			<button class="spot-button">&darr;</button>
 			<div class="column" id="col4">
 				<div class="spot row0 diag10"></div>
 				<div class="spot row1 diag5 diag9"></div>
@@ -90,7 +90,7 @@
 		</div>
 		
 		<div class="column-container">
-			<button>&darr;</button>
+			<button class="spot-button">&darr;</button>
 			<div class="column" id="col5">
 				<div class="spot row0 diag9"></div>
 				<div class="spot row1 diag8"></div>
@@ -102,7 +102,7 @@
 		</div>
 		
 		<div class="column-container">
-			<button>&darr;</button>
+			<button class="spot-button">&darr;</button>
 			<div class="column" id="col6">
 				<div class="spot row0 diag8"></div>
 				<div class="spot row1 diag7"></div>
