comment in html file

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<div class="column-container">
 			<button class="spot-button">&darr;</button>
 			<div class="column" id="col0">
+				<!-- these classes let me conveniently make an array for rows, columns, and diagonals -->
 				<div class="spot row0 diag2"></div>
 				<div class="spot row1 diag1"></div>
 				<div class="spot row2 diag0"></div>
