adding input to specify board dimensions

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 		<div id="instructions">Click a button to drop your piece in that column.</div>
 		<div id="current-player"></div>
 	</div>
+	<div id="board-size-container">
+		<div id="board-size-text">What size would you like the board to be? (max. 10x10)</div>
+		<div id="rows-text-container">
+			<div id="rows-text">Rows:</div>
+			<input id="rows-input" placeholder="Default: 6">
+		</div>
+		<div id="columns-text-container">
+			<div id="columns-text">Columns:</div>
+			<input id="columns-input" placeholder="Default: 7">
+		</div>
+		<div id="next-button-container">
+			<button id="next-button">Next</button>
+		</div>
+	</div>
 	<div id="name-input-container">
 		<input id="player1-input" placeholder="Player 1 Name">
 		<input id="player2-input" placeholder="Player 2 Name">
