adding variable gameboard width and updated readme

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div id="current-player"></div>
 	</div>
 	<div id="board-size-container">
-		<div id="board-size-text">What size would you like the board to be? (max. 10x10)</div>
+		<div id="board-size-text">What size would you like the board to be?</div>
 		<div id="rows-text-container">
 			<div id="rows-text">Rows:</div>
 			<input id="rows-input" placeholder="Default: 6">
@@ -26,6 +26,7 @@
 		</div>
 	</div>
 	<div id="name-input-container">
+		<div id="name-text">Type your names here!</div>
 		<input id="player1-input" placeholder="Player 1 Name">
 		<input id="player2-input" placeholder="Player 2 Name">
 	</div>
